syntax = "proto3";

package kafkaflow.protobuf.demo;

option csharp_namespace = "KafkaFlowProtobufGsrDemo.Messages";

message Analytics {
  string event_id = 1;
  string user_id = 2;
  string session_id = 3;
  EventType event_type = 4;
  string event_name = 5;
  int64 timestamp = 6;
  UserAgent user_agent = 7;
  Location location = 8;
  map<string, string> properties = 9;
  double duration_ms = 10;
  string page_url = 11;
  string referrer_url = 12;
  DeviceInfo device_info = 13;
}

message UserAgent {
  string raw = 1;
  string browser = 2;
  string browser_version = 3;
  string os = 4;
  string os_version = 5;
  string device_type = 6;
}

message Location {
  string ip_address = 1;
  string country = 2;
  string region = 3;
  string city = 4;
  double latitude = 5;
  double longitude = 6;
  string timezone = 7;
}

message DeviceInfo {
  string device_id = 1;
  string platform = 2;
  string app_version = 3;
  string screen_resolution = 4;
  string language = 5;
  bool is_mobile = 6;
}

enum EventType {
  UNKNOWN_EVENT_TYPE = 0;
  PAGE_VIEW = 1;
  CLICK = 2;
  FORM_SUBMIT = 3;
  PURCHASE = 4;
  LOGIN = 5;
  LOGOUT = 6;
  SEARCH = 7;
  SCROLL = 8;
  HOVER = 9;
  VIDEO_PLAY = 10;
  VIDEO_PAUSE = 11;
  DOWNLOAD = 12;
  SHARE = 13;
  ERROR = 14;
  CUSTOM = 15;
}
